[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/Input/DrawBox.gd" type="Script" id=1]
[ext_resource path="res://Interface/TextDisplay/LabelAdaptive.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/Buttons/IconButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Input/AnswerDraw.gd" type="Script" id=4]
[ext_resource path="res://res/Fabric19.jpg" type="Texture" id=5]

[node name="VBoxContainerDraw" type="VBoxContainer"]
margin_top = 170.0
margin_right = 530.0
margin_bottom = 606.0
mouse_filter = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainerMinimap" type="HBoxContainer" parent="."]
margin_right = 530.0
alignment = 1

[node name="LabelDraw" parent="HBoxContainerMinimap" instance=ExtResource( 2 )]
margin_left = 263.0
margin_right = 263.0

[node name="LabelProgress" parent="HBoxContainerMinimap" instance=ExtResource( 2 )]
margin_left = 267.0
margin_right = 267.0

[node name="HBoxContainerMain" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 530.0
margin_bottom = 167.0
custom_constants/separation = 15
alignment = 1

[node name="VBoxContainerLeft" type="VBoxContainer" parent="HBoxContainerMain"]
margin_left = 150.0
margin_right = 195.0
margin_bottom = 163.0
custom_constants/separation = 15
alignment = 1

[node name="VBoxContainerPrevious" type="VBoxContainer" parent="HBoxContainerMain/VBoxContainerLeft"]
margin_right = 45.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainerPrevious" type="HBoxContainer" parent="HBoxContainerMain/VBoxContainerLeft/VBoxContainerPrevious"]
margin_right = 45.0
margin_bottom = 74.0
alignment = 1

[node name="PreviousButton" parent="HBoxContainerMain/VBoxContainerLeft/VBoxContainerPrevious/HBoxContainerPrevious" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 45.0

[node name="ButtonUndoDrawing" parent="HBoxContainerMain/VBoxContainerLeft" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 89.0
margin_right = 45.0
margin_bottom = 163.0

[node name="AnswerDraw" type="Control" parent="HBoxContainerMain" groups=[
"noScroll",
]]
margin_left = 210.0
margin_right = 319.0
margin_bottom = 109.0
rect_min_size = Vector2( 109, 109 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="HBoxContainerMain/AnswerDraw"]
show_behind_parent = true
position = Vector2( 306.957, 208.703 )
scale = Vector2( 0.373909, 0.321247 )
texture = ExtResource( 5 )

[node name="VBoxContainerRight" type="VBoxContainer" parent="HBoxContainerMain"]
margin_left = 334.0
margin_right = 379.0
margin_bottom = 163.0
custom_constants/separation = 15
alignment = 2

[node name="VBoxContainerNext" type="VBoxContainer" parent="HBoxContainerMain/VBoxContainerRight"]
margin_right = 45.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="HBoxContainerNext" type="HBoxContainer" parent="HBoxContainerMain/VBoxContainerRight/VBoxContainerNext"]
margin_right = 45.0
margin_bottom = 74.0
alignment = 1

[node name="NextButton" parent="HBoxContainerMain/VBoxContainerRight/VBoxContainerNext/HBoxContainerNext" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 45.0

[node name="ButtonClearDrawing" parent="HBoxContainerMain/VBoxContainerRight" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 89.0
margin_right = 45.0
margin_bottom = 163.0
[connection signal="pressed" from="HBoxContainerMain/VBoxContainerLeft/VBoxContainerPrevious/HBoxContainerPrevious/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="HBoxContainerMain/VBoxContainerLeft/ButtonUndoDrawing" to="." method="_on_ButtonUndoDrawing_pressed"]
[connection signal="gui_input" from="HBoxContainerMain/AnswerDraw" to="HBoxContainerMain/AnswerDraw" method="_on_AnswerDraw_gui_input"]
[connection signal="pressed" from="HBoxContainerMain/VBoxContainerRight/VBoxContainerNext/HBoxContainerNext/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="HBoxContainerMain/VBoxContainerRight/ButtonClearDrawing" to="." method="_on_ButtonClearDrawing_pressed"]
